# Boligl-n-MCP

./: .env.example  README.md  pyproject.toml
boliglan_mcp/: __init__.py  calculator.py  email_generator.py  finansportalen.py  norges_bank.py  server.py
